render rough version of game

--- a/client/views/game.htm
+++ b/client/views/game.htm
@@ -1,5 +1,5 @@
-<div ng-controller="gameController">
+<div class="gamebox" ng-controller="gameController">
   <h1>How Good Is Your Time?</h1>
   <input type="button" value="Play the game!">
-  {{screenPrompt}}
+  <div class="screenPrompt">{{screenPrompt}}</div>
   </div>
