--- a/client/style.css
+++ b/client/style.css
@@ -1,7 +1,8 @@
 .screenPrompt {
   margin-top: 100px;
   background: green;
-  color: green;
+  color: white;
+  text-align: center;
   margin-left: 25%;
   margin-right: 25%;
   border-radius: 20px;
