--- a/client/views/videoList.htm
+++ b/client/views/videoList.htm
@@ -1,3 +1,10 @@
-<div ng-controller="videoListController">
-  {{videoList}}
+<div ng-controller="videoListController" >
+  <h3>Diagnostic: </h3>
+  <p><b>{{diagnostic}}</b></p>
+  <div ng-repeat="video in videoList track by $index">
+    <img src="{{video.snippet.thumbnails.default.url}}">
+    <h4>{{video.snippet.title}}</h4>
+    <p>{{video.snippet.description}}</p>
+    </div>
+  
 </div>
